<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        tools:context=".TermsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_degrade">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms1"
        android:layout_margin="8dp"
        android:textSize="12sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms2"
        android:layout_margin="8dp"
        android:textSize="12sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms3"
        android:layout_margin="8dp"
        android:textSize="12sp"
        android:textColor="@color/black"/>

</LinearLayout>